--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@slack/webhook": "^5.0.0",
+    "moment": "^2.24.0",
     "node-ical": "^0.9.2"
   }
 }
