--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "config.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@slack/webhook": "^5.0.0",
     "deepmerge": "^4.0.0",
+    "dotenv": "^8.1.0",
     "moment": "^2.24.0",
     "node-ical": "^0.9.2"
   }
