--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ical-parsing",
+  "name": "ical-slack-vacation",
   "version": "1.0.0",
   "description": "",
-  "main": "config.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/index.js",
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +17,12 @@
     "dotenv": "^8.1.0",
     "moment": "^2.24.0",
     "node-ical": "^0.9.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "jest": "^25.2.7",
+    "ts-jest": "^25.3.1",
+    "typescript": "^3.8.3"
   }
 }
